<resources>
    <string name="app_name">CalculatorA2</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <string name="math_add">+</string>
    <string name="math_subtraction">-</string>
    <string name="math_multiplication">*</string>
    <string name="math_division">÷</string>

    <string name="math_decimal">.</string>
    <string name="option_clear">C</string>
    <string name="option_enter">=</string>

    <string name="display_nothing"></string>


    <string name="helpIconDesc">A help icon to give the user a message to hep them figure out a calculator</string>
    <string name="textBackgroundBoarderDesc">Boarder to make the output information pop</string>
    <string name="displayWindowDesc">The window to show the user information</string>
</resources>