<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_7"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_8"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_9"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/math_add"
                android:textSize="28sp"
                app:iconPadding="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_4"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_5"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_6"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_subtract"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/math_subtraction"
                android:textSize="28sp"
                app:iconPadding="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_1"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_2"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_3"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/math_multiplication"
                android:textSize="28sp"
                app:iconPadding="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/number_0"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_decimal"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/math_decimal"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/option_clear"
                android:textSize="28sp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contextClickable="true"
                android:elegantTextHeight="false"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="0dp"
                android:text="@string/math_division"
                android:textSize="28sp"
                app:iconPadding="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/helpIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/helpIconDesc"
        android:longClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/textBackgroundBoarder"
        android:layout_width="412dp"
        android:layout_height="30dp"
        android:layout_marginTop="145dp"
        android:background="#959090"
        android:contentDescription="@string/textBackgroundBoarderDesc"
        android:text="@string/display_nothing"
        android:textColor="#212121"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/displayWindowDesc"
        android:text="@string/display_nothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_enter"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:contextClickable="true"
        android:elegantTextHeight="false"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="0dp"
        android:text="@string/option_enter"
        android:textSize="28sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>